.getLast() was changed because it doesnt exist in older versions of java